--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -48,5 +48,41 @@
 			"min": "Must be at least 8 characters",
 			"mismatch": "Passwords do not match"
 		}
+	},
+	"exceptions": {
+		"internal-server-error": "Internal server error",
+		"bad-request-error": "Bad request error",
+		"auth": {
+			"passwords-not-match": "Invalid password"
+		},
+		"users": {
+			"user-already-exists": "User already exists",
+			"user-not-found": "User not found",
+			"verifications": {
+				"invalid-token": "Invalid verification token",
+				"expired-token": "Verification token expired",
+				"validate_email": {
+					"already-verified": "Email is already verified",
+					"cooldown-not-lifted": "Limited to one verification email every 5 minutes"
+				},
+				"reset_password": {
+					"cooldown-not-lifted": "Limited to one password reset request every 5 minutes"
+				}
+			}
+		},
+		"activity": {
+			"activity-not-found": "Activity not found",
+			"missing-required-parameter-error": "Missing required query param: projectId"
+		},
+		"program": {
+			"program-not-found": "Program not found"
+		},
+		"project": {
+			"project-not-found": "Project not found"
+		},
+		"subActivity": {
+			"subActivity-not-found": "Sub Activity not found",
+			"missing-required-parameter-error": "Missing required query param: activityId"
+		}
 	}
 }
