--- a/src/lib/i18n/locales/pt-BR.json
+++ b/src/lib/i18n/locales/pt-BR.json
@@ -47,5 +47,42 @@
 			"min": "Deve ter pelo menos 8 caracteres",
 			"mismatch": "As senhas não conferem"
 		}
+	},
+	"exceptions": {
+		"internal-server-error": "Erro interno do servidor",
+		"bad-request-error": "Erro de solicitação inválida",
+		"missing-required-parameter-error": "Parâmetro obrigatório faltando: {key}",
+		"auth": {
+			"passwords-not-match": "Senha inválida"
+		},
+		"users": {
+			"user-already-exists": "Usuário já existe",
+			"user-not-found": "Usuário não encontrado",
+			"verifications": {
+				"invalid-token": "Token de verificação inválido",
+				"expired-token": "Token de verificação expirado",
+				"validate_email": {
+					"already-verified": "Email já foi verificado",
+					"cooldown-not-lifted": "Limitado a um email de verificação a cada 5 minutos"
+				},
+				"reset_password": {
+					"cooldown-not-lifted": "Limitado a uma redefinição de senha a cada 5 minutos"
+				}
+			}
+		},
+		"activity": {
+			"activity-not-found": "Atividade não encontrada",
+			"missing-required-parameter-error": "Parâmetro obrigatório faltando: projectId"
+		},
+		"program": {
+			"program-not-found": "Programa não encontrado"
+		},
+		"project": {
+			"project-not-found": "Projeto não encontrado"
+		},
+		"subActivity": {
+			"subActivity-not-found": "Sub Atividade não encontrada",
+			"missing-required-parameter-error": "Parâmetro obrigatório faltando: activityId"
+		}
 	}
 }
