--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -1,88 +1,97 @@
 {
-	"cookies-notice": {
-		"more-info": "More info at",
-		"subtitle": "We only use essential cookies to provide our services.",
-		"title": "Cookies Notice"
-	},
-	"terms": {
-		"cookies-policy": "Cookies Policy",
-		"dismiss": "Dismiss",
-		"search": "Search for activities",
-		"email": "E-mail",
-		"signin": "Sign in",
-		"signup": "Sign up",
-		"forgotpw": "Send instructions"
-	},
-	"pages": {
-		"home": {
-			"title-1": "Extension actions",
-			"title-2": "in the palm of your hands",
-			"subtitle": "Sign up for events, lectures, workshops, outreach projects and programs offered by your university. Create and submit proposals for new extension actions directly through the platform.",
-			"signup-now": "Create your account now!",
-			"browse-activities": "Browse activities"
-		}
-	},
-	"dialog": {
-		"auth": {
-			"content": {
-				"forgotpw-btn": "Go back to sign in",
-				"signin-btn": "Don't have an account? Sign up",
-				"signup-btn": "Already have an account? Sign in"
-			},
-			"cpassword-label": "Confirm password",
-			"description": "Please choose a provider to sign in, or enter your email and password.",
-			"email-label": "E-mail address",
-			"email-placeholder": "Your e-mail address",
-			"forgot-password": "Forgot your password?",
-			"or-continue": "or continue with",
-			"password-label": "Password",
-			"password-placeholder": "Your password",
-			"title": "Log in or create an account"
-		}
-	},
-	"validations": {
-		"email": {
-			"invalid": "E-mail address looks invalid"
-		},
-		"password": {
-			"min": "Must be at least 8 characters",
-			"mismatch": "Passwords do not match"
-		}
-	},
-	"exceptions": {
-		"internal-server-error": "Internal server error",
-		"bad-request-error": "Bad request error",
-		"auth": {
-			"passwords-not-match": "Invalid password"
-		},
-		"users": {
-			"user-already-exists": "User already exists",
-			"user-not-found": "User not found",
-			"verifications": {
-				"invalid-token": "Invalid verification token",
-				"expired-token": "Verification token expired",
-				"validate_email": {
-					"already-verified": "Email is already verified",
-					"cooldown-not-lifted": "Limited to one verification email every 5 minutes"
-				},
-				"reset_password": {
-					"cooldown-not-lifted": "Limited to one password reset request every 5 minutes"
-				}
-			}
-		},
-		"activity": {
-			"activity-not-found": "Activity not found",
-			"missing-required-parameter-error": "Missing required query param: projectId"
-		},
-		"program": {
-			"program-not-found": "Program not found"
-		},
-		"project": {
-			"project-not-found": "Project not found"
-		},
-		"subActivity": {
-			"subActivity-not-found": "Sub Activity not found",
-			"missing-required-parameter-error": "Missing required query param: activityId"
-		}
-	}
+  "cookies-notice": {
+    "more-info": "More info at",
+    "subtitle": "We only use essential cookies to provide our services.",
+    "title": "Cookies Notice"
+  },
+  "terms": {
+    "cookies-policy": "Cookies Policy",
+    "dismiss": "Dismiss",
+    "search": "Search for activities",
+    "email": "E-mail",
+    "signin": "Sign in",
+    "signup": "Sign up",
+    "forgotpw": "Send instructions",
+    "privacy-policy": "Privacy Policy",
+    "terms-and-conditions": "Terms and Conditions"
+  },
+  "pages": {
+    "home": {
+      "title-1": "Extension actions",
+      "title-2": "in the palm of your hands",
+      "subtitle": "Sign up for events, lectures, workshops, outreach projects and programs offered by your university. Create and submit proposals for new extension actions directly through the platform.",
+      "signup-now": "Create your account now!",
+      "browse-activities": "Browse activities"
+    }
+  },
+  "dialog": {
+    "auth": {
+      "content": {
+        "forgotpw-btn": "Go back to sign in",
+        "signin-btn": "Don't have an account? Sign up",
+        "signup-btn": "Already have an account? Sign in"
+      },
+      "cpassword-label": "Confirm password",
+      "description": "Please choose a provider to sign in, or enter your email and password.",
+      "email-label": "E-mail address",
+      "email-placeholder": "Your e-mail address",
+      "forgot-password": "Forgot your password?",
+      "or-continue": "or continue with",
+      "password-label": "Password",
+      "password-placeholder": "Your password",
+      "title": "Log in or create an account"
+    }
+  },
+  "validations": {
+    "email": {
+      "invalid": "E-mail address looks invalid"
+    },
+    "password": {
+      "min": "Must be at least 8 characters",
+      "mismatch": "Passwords do not match"
+    }
+  },
+  "exceptions": {
+    "internal-server-error": "Internal server error",
+    "bad-request-error": "Bad request error",
+    "auth": {
+      "passwords-not-match": "Invalid password"
+    },
+    "users": {
+      "user-already-exists": "User already exists",
+      "user-not-found": "User not found",
+      "verifications": {
+        "invalid-token": "Invalid verification token",
+        "expired-token": "Verification token expired",
+        "validate_email": {
+          "already-verified": "Email is already verified",
+          "cooldown-not-lifted": "Limited to one verification email every 5 minutes"
+        },
+        "reset_password": {
+          "cooldown-not-lifted": "Limited to one password reset request every 5 minutes"
+        }
+      }
+    },
+    "activity": {
+      "activity-not-found": "Activity not found",
+      "missing-required-parameter-error": "Missing required query param: projectId"
+    },
+    "program": {
+      "program-not-found": "Program not found"
+    },
+    "project": {
+      "project-not-found": "Project not found"
+    },
+    "subActivity": {
+      "subActivity-not-found": "Sub Activity not found",
+      "missing-required-parameter-error": "Missing required query param: activityId"
+    }
+  },
+  "footer": {
+    "about-us": "About us",
+    "open-source": "Open source",
+    "public-analytics": "Public analytics",
+    "legal": "Legal",
+    "reserved": "© 2022-PRESENT The Extensionly contributors. All rights reserved."
+  }
 }
