feat: saving theme in cookies

--- a/src/lib/i18n/locales/en/default.json
+++ b/src/lib/i18n/locales/en/default.json
@@ -19,7 +19,10 @@
     "theme": "Theme",
     "language": "Language",
     "signout": "Sign Out",
-    "my-account": "My account"
+    "my-account": "My account",
+    "system": "System",
+    "winter": "Winter",
+    "night": "Night"
   },
   "pages": {
     "home": {
