--- a/src/lib/i18n/locales/en/default.json
+++ b/src/lib/i18n/locales/en/default.json
@@ -1,9 +1,4 @@
 {
-	"cookies-notice": {
-		"more-info": "More info at",
-		"subtitle": "We only use essential cookies to provide our services.",
-		"title": "Cookies Notice"
-	},
 	"terms": {
 		"cookies-policy": "Cookies Policy",
 		"dismiss": "Dismiss",
@@ -24,7 +19,13 @@
 		"winter": "Winter",
 		"night": "Night",
 		"please-wait": "Please wait",
-		"with": "with"
+		"with": "with",
+		"cookies-notice": {
+			"more-info": "More info at",
+			"subtitle": "We only use essential cookies to provide our services.",
+			"title": "Cookies Notice"
+		},
+		"save": "Save"
 	},
 	"pages": {
 		"home": {
@@ -33,9 +34,37 @@
 			"subtitle": "Sign up for events, lectures, workshops, outreach projects and programs offered by your university. Create and submit proposals for new extension actions directly through the platform.",
 			"signup-now": "Create your account now!",
 			"browse-activities": "Browse activities"
+		},
+		"account": {
+			"avatar": {
+				"description": "Click on the avatar to upload a custom one from your files.",
+				"info": "An avatar is optional but strongly recommended.",
+				"title": "Your Avatar"
+			},
+			"delete": {
+				"description": "Permanently remove your Personal Account and all of its contents from the Extensionly platform.",
+				"dialog": {
+					"confirm": "Delete my account",
+					"description": "Please confirm deletion by typing your email.",
+					"title": "Confirm Account Deletion",
+					"trigger": "Delete"
+				},
+				"info": "Be careful with your actions! This is not reversible.",
+				"success": "User deleted successfully.",
+				"title": "Delete Personal Account"
+			},
+			"email": {
+				"description": "Please enter the email address you want to use to log in with Extensionly.",
+				"info": "We will email you to verify the change.",
+				"title": "Your Email"
+			},
+			"name": {
+				"description": "Please enter your full name.",
+				"title": "Your Name"
+			}
 		}
 	},
-	"dialog": {
+	"dialogs": {
 		"auth": {
 			"title": {
 				"signin": "Log in or create an account",
@@ -66,6 +95,10 @@
 		}
 	},
 	"validations": {
+		"string": {
+			"min": "Must be longer",
+			"max": "Must be shorter"
+		},
 		"email": {
 			"invalid": "E-mail address looks invalid"
 		},
