--- a/src/lib/i18n/locales/pt-BR/default.json
+++ b/src/lib/i18n/locales/pt-BR/default.json
@@ -56,11 +56,20 @@
 			"email": {
 				"description": "Digite o endereço de e-mail que deseja usar para fazer login com a Extensionly.",
 				"info": "Enviaremos um e-mail para você para validar a alteração.",
-				"title": "Seu Email"
+				"title": "Seu Email",
+				"email-verified": "Seu email foi validado!",
+				"failed-description": "Validação falhou. Tente novamente mais tarde.",
+				"not-yet-verified": "Seu email ainda não foi validado.",
+				"please-verify": "Por favor, valide clicando em",
+				"resend-email": "Reenviar Verificação de Email",
+				"sent-success": "Email enviado com sucesso!",
+				"success": "Email validado com sucesso!",
+				"success-description": "Validado! Você pode fechar esta página agora."
 			},
 			"name": {
 				"description": "Por favor, digite seu nome completo.",
-				"title": "Seu Nome"
+				"title": "Seu Nome",
+				"success": "Nome atualizado! Por favor, entre novamente para ver a mudança."
 			}
 		}
 	},
