--- a/src/lib/i18n/locales/en/default.json
+++ b/src/lib/i18n/locales/en/default.json
@@ -83,7 +83,7 @@
 		}
 	},
 	"exceptions": {
-		"route-not-authorized": "You are not authorized to access this page",
+		"route-not-authorized": "You are not authorized to access that page",
 		"internal-server-error": "Internal server error",
 		"bad-request-error": "Bad request error",
 		"auth": {
