--- a/src/lib/i18n/locales/pt-BR/routes/account.json
+++ b/src/lib/i18n/locales/pt-BR/routes/account.json
@@ -51,6 +51,16 @@
         "label": "A URL da sua nova foto de perfil"
       },
       "info": "Para ver as alterações em sua sessão atual, faça login novamente."
+    },
+    "password": {
+      "success": "Senha atualizada com sucesso!",
+      "pw": {
+        "label": "Sua nova senha"
+      },
+      "cpw": {
+        "label": "Confirme sua nova senha"
+      },
+      "title": "Edite a senha da sua conta"
     }
   }
 }
