feat: add phone number input

--- a/src/lib/i18n/locales/en/zod.json
+++ b/src/lib/i18n/locales/en/zod.json
@@ -1,22 +1,25 @@
 {
-	"zod": {
-		"url": {
-			"invalid": "URL looks invalid"
-		},
-		"string": {
-			"min": "Must be longer",
-			"max": "Must be shorter",
-			"uppercase": "Must have at least one uppercase letter",
-			"lowercase": "Must have at least one lowercase letter",
-			"numeric": "Must have at least one number",
-			"symbol": "Must have at least one symbol"
-		},
-		"email": {
-			"invalid": "E-mail address looks invalid"
-		},
-		"password": {
-			"min": "Must be at least 8 characters",
-			"mismatch": "Passwords do not match"
-		}
-	}
+  "zod": {
+    "url": {
+      "invalid": "URL looks invalid"
+    },
+    "string": {
+      "min": "Must be longer",
+      "max": "Must be shorter",
+      "uppercase": "Must have at least one uppercase letter",
+      "lowercase": "Must have at least one lowercase letter",
+      "numeric": "Must have at least one number",
+      "symbol": "Must have at least one symbol"
+    },
+    "email": {
+      "invalid": "E-mail address looks invalid"
+    },
+    "password": {
+      "min": "Must be at least 8 characters",
+      "mismatch": "Passwords do not match"
+    },
+    "phone": {
+      "invalid": "Phone number looks invalid"
+    }
+  }
 }
